namespace SmartGrowHub.Shared.GrowHubs.Model;

public sealed record PlantDto(string Id, string Name, DateTime PlantedAt);